    output.  Previously the background, density, and other metadata were
    also discarded.

2014-04-22  6.8.9-1 Cristy  <quetzlzacatenango@image...>
  * Support new -hough-lines option.
  * Support new -mean-shift option.
  * identify -units without argument no longer faults (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25542).

2014-04-20  6.8.9-1 Dirk Lemstra <dirk@snakeware...>
  * Added image moments, canny edge and hough line to Magick++.
  * The 8bim profile will be updated when the icc/iptc/xmp profile is changed.
  * Fix for stack overflow in DestroyXMLTree in Windows (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25457).
  * Added new coder for VIPS image format (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=25445).
  * Moved detection of type to a separate method in Magick++. The type() method
    no longer modifies the type of the image. Use determineType() instead.
  * Improved error messages when a coder uses Ghostscript.

2014-04-11  6.8.9-0 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.9-0, SVN revision 15441.

2014-04-03  6.8.9-0 Glenn Randers-Pehrson <glennrp@image...>
  * Fixed bug with -strip failing to exclude PNG chunks (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25353).

2014-03-30  6.8.9-0 Dirk Lemstra <dirk@snakeware...>
  * Added new coder to take a screen shot of a monitor in Windows (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=23&t=25191).

2014-03-24  6.8.9-0 Cristy  <quetzlzacatenango@image...>
  * Don't transform sRGB compatible colorspaces to sRGB, doing so
    inadvertingly promotes colormapped images to DirectClass.
  * Use temporary path rather then current working directory (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25313).
  * Support -canny edge detection option.